[gd_scene load_steps=2 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/ui/main_ui.gd" id="1_main"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Header" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MyRPG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerLevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Power Level: 1"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Gold: 0"
horizontal_alignment = 1

[node name="EnvironmentLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Environment: Forest Dojo"
horizontal_alignment = 1

[node name="StepsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Steps: 0"
horizontal_alignment = 1
